<resources>

    <string name="title_activity_cycle_text_view">CycleTextView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="click_me_to_release">Release ViewPager</string>
    <string name="parent0">Parent0</string>
    <string name="no_cycle_btn">no cycle view pager</string>
    <string name="cycle_btn">cycle view pager</string>
    <string name="wheel_cycle_btn">wheel cycle view pager</string>
    <string name="event_cycle_btn">event cycle view pager</string>
    <string name="fixed_cycle_btn">fixed cycle view pager</string>
    <string name="nested_cycle_btn">nested cycle view pager</string>

</resources>