<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.androiddevelop.cycleviewpager.example.NoCycleTextView" >

    <Button
        android:id="@+id/noCycleBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/view_padding"
        android:text="@string/no_cycle_btn" >
    </Button>

    <Button
        android:id="@+id/cycleBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/view_padding"
        android:text="@string/cycle_btn" >
    </Button>

    <Button
        android:id="@+id/wheelCycleBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/view_padding"
        android:text="@string/wheel_cycle_btn" >
    </Button>

    <Button
        android:id="@+id/eventCycleBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/view_padding"
        android:text="@string/event_cycle_btn" >
    </Button>

    <Button
        android:id="@+id/fixedCycleBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/view_padding"
        android:text="@string/fixed_cycle_btn" >
    </Button>

    <Button
        android:id="@+id/nestedCycleBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/view_padding"
        android:text="@string/nested_cycle_btn" >
    </Button>

</LinearLayout>